Railway build fix: install dev deps, run prisma generate on install, run migrations at start

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
         "build": "tsc -p tsconfig.json",
         "start": "node dist/index.js",
         "seed": "node prisma/seed.js",
-        "postinstall": "prisma generate && prisma migrate deploy",
+        "postinstall": "prisma generate",
         "prebuild": "rm -rf node_modules/.cache || true",
         "migrate": "prisma migrate deploy",
         "deploy": "npm run migrate && npm run seed"
