--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,8 +7,8 @@ WORKDIR /app
 # Copy package files first for better caching
 COPY package*.json ./
 
-# Install dependencies and clear cache
-RUN npm ci --only=production && npm cache clean --force
+# Install all dependencies (dev needed for build) and clear cache
+RUN npm ci && npm cache clean --force
 
 # Copy source code
 COPY . .
