--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
+        "openai": "^4.57.0",
         "zod": "^4.1.5"
     },
     "devDependencies": {
