--- a/server/package.json
+++ b/server/package.json
@@ -13,27 +13,26 @@
         "deploy": "npm run migrate && npm run seed"
     },
     "prisma": {
-    "seed": "node prisma/seed.js"
+        "seed": "node prisma/seed.js"
     },
     "dependencies": {
-        "@prisma/client": "6.15.0",
-        "bcrypt": "^5.1.1",
+        "@prisma/client": "^6.15.0",
+        "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
-        "openai": "^4.57.0",
         "zod": "^3.25.76"
     },
     "devDependencies": {
-        "@types/bcrypt": "^5.0.2",
+        "@types/bcryptjs": "^2.4.6",
         "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.12.7",
-        "prisma": "6.15.0",
+        "prisma": "^6.15.0",
         "tsx": "^4.7.0",
         "typescript": "^5.4.5"
     }
