--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,13 @@
 {
   "name": "client",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist --single -l $PORT"
   },
   "dependencies": {
     "html2canvas": "^1.4.1",
@@ -18,6 +18,7 @@
     "recharts": "^3.1.2"
   },
   "devDependencies": {
+    "serve": "^14.2.1",
     "@eslint/js": "^9.33.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^19.1.10",
