--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
-        "zod": "^3.25.76"
+        "zod": "^3.25.76",
+        "openai": "^4.55.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
