--- a/server/package.json
+++ b/server/package.json
@@ -16,14 +16,17 @@
     },
     "dependencies": {
         "@prisma/client": "^6.15.0",
+        "bcrypt": "^6.0.0",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "docx": "^9.5.1",
         "dotenv": "^16.4.5",
-        "express": "^4.19.2",
+        "express": "^4.21.2",
         "express-rate-limit": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
         "openai": "^4.55.0",
+        "puppeteer": "^24.22.3",
         "zod": "^3.25.76"
     },
     "devDependencies": {
@@ -32,7 +35,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
-        "@types/node": "^20.12.7",
+        "@types/node": "^20.19.17",
         "prisma": "^6.15.0",
         "tsx": "^4.7.0",
         "typescript": "^5.4.5"
