--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "tsx watch src/index.ts",
         "build": "tsc -p tsconfig.json",
-        "start": "node dist/index.js",
+        "start": "sh -lc 'node dist/index.js || node dist/src/index.js'",
         "seed": "node prisma/seed.js",
         "postinstall": "prisma generate",
         "migrate": "prisma migrate deploy",
